unpackaged/main/default/objects/Option__c/fields/Authorized_Login_Text__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Login_Text__c</fullName>
    <label>Authorized Login Text</label>
    <type>TextArea</type>
</CustomField>