unpackaged/main/default/objects/Option__c/fields/Component_Active__c.field-meta.xml
<CustomField>
    <fullName>Component_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Component Active</label>
    <type>Checkbox</type>
</CustomField>