unpackaged/main/default/objects/Option__c/fields/Component_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Button_Name__c</fullName>
    <label>Component Button Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>