unpackaged/main/default/objects/Option__c/fields/Component_Mode__c.field-meta.xml
<CustomField>
    <fullName>Component_Mode__c</fullName>
    <label>Component Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Embeded</fullName>
            </value>
            <value>
                <fullName>On Button Press</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>