unpackaged/main/default/objects/Option__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>