unpackaged/main/default/objects/Option__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Center Section Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>