unpackaged/main/default/objects/Option__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <label>Header</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>