unpackaged/main/default/objects/Option__c/fields/In_Option_Description__c.field-meta.xml
<CustomField>
    <fullName>In_Option_Description__c</fullName>
    <label>Option Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>