unpackaged/main/default/objects/Option__c/fields/Login_Type__c.field-meta.xml
<CustomField>
    <fullName>Login_Type__c</fullName>
    <label>Login Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Unauthorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>