unpackaged/main/default/objects/Option__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Option</label>
    <referenceTo>Option__c</referenceTo>
    <relationshipLabel>Child Options</relationshipLabel>
    <relationshipName>Child_Options</relationshipName>
    <type>Lookup</type>
</CustomField>