unpackaged/main/default/objects/Option__c/fields/Option_Name__c.field-meta.xml
<CustomField>
    <fullName>Option_Name__c</fullName>
    <label>Option Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>