unpackaged/main/default/objects/Option__c/fields/Right_Section_Text__c.field-meta.xml
<CustomField>
    <fullName>Right_Section_Text__c</fullName>
    <label>Right Section Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>