unpackaged/main/default/objects/Option__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <label>Draft 📝</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
                <label>Under Review 🔍</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <label>Active ✅</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <label>Inactive 🚫</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>