unpackaged/main/default/objects/Option__c/fields/Sub_Header__c.field-meta.xml
<CustomField>
    <fullName>Sub_Header__c</fullName>
    <label>Sub Header</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>