unpackaged/main/default/objects/Option__c/listViews/Recently_Created.listView-meta.xml
<ListView>
    <fullName>Recently_Created</fullName>
    <columns>NAME</columns>
    <columns>Option_Name__c</columns>
    <columns>Option__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>